generate related body